# LLM-AnomalyClassification-TimeSeries

./: ExplanationByClaude.md  README.md  ReadmeCN.md  attackdata_header.csv  change.py  pyproject.toml  requirements.txt
Transformer-based/: List_of_attacks_Final.csv  README.md  ReadmeCN.md  extracted_rows_227831_228231.csv  pyproject.toml
Transformer-based/anomaly_attack/: __init__.py  data.py  features.py  models.py  utils.py
Transformer-based/artifacts/: inference_result.json  pipeline_meta.json  stage2_metrics.json  stage2_model.pth
Transformer-based/configs/: default.yaml
Transformer-based/scripts/: infer_attack_type.py  run_all.sh  train_stage2.py
anomaly_attack/: __init__.py  config.py  data.py  features.py  models.py
artifacts/: inference_result.json  pipeline_meta.json  stage2_metrics.json  stage2_model.pth
configs/: default.yaml
scripts/: infer_attack_type.py  run_all.sh  train_stage2.py
